--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,12 +5,7 @@
 			"type": "shell",
 			"label": "C/C++: g++.exe build active file",
 			"command": "D:\\Programme\\mingw64\\bin\\g++.exe",
-			"args": [
-				"-g",
-				"${workspaceFolder}\\*.cpp",
-				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
-			],
+			"args": ["-g", "${file}", "-o", "${fileDirname}\\${fileBasenameNoExtension}.exe"],
 			"options": {
 				"cwd": "${workspaceFolder}"
 			},
